--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 
             <section>
-                I even like to play Fortnight
+                I even like to play Fortnite
             </section>
             <iframe width="450" height="315" src="https://www.youtube.com/embed/X5NrPXQG5a8?si=ngqSrOwimUFUWVZN"
                 title="YouTube video player" frameborder="0"
